--- a/layouts/partials/content.header.html
+++ b/layouts/partials/content.header.html
@@ -30,7 +30,7 @@
       <br>
       <i class="fa fa-tags"> </i>
       {{ range .Params.categories }}
-        <a  href="{{ "/categories/" | absURL }}{{ . | urlize }}">{{ . }}</a>
+        <a  href="{{ "/categories/" }}{{ . | urlize }}">{{ . }}</a>
       {{ end }}
     {{ end }}
   </span>
