--- a/layouts/partials/content.header.html
+++ b/layouts/partials/content.header.html
@@ -1,14 +1,14 @@
 <section>
 <h1 class="content-title">
   {{ if .IsNode }}
-  <a href="{{ .Permalink }}">{{ .Title}}</a>
+  <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a>
   {{ else }}
-  <a href="{{ .RelPermalink }}">{{ .Title }}{{ if .Draft }} :: Draft {{end}}</a>
+  <a href="{{ .RelPermalink }}">{{ .Title | markdownify }}{{ if .Draft }} :: Draft {{end}}</a>
   {{ end }}
 </h1>
 {{ if .IsPage }}
-{{ if .Params.subtitle }}<p class=subtitle>{{ .Params.subtitle }}</p>{{ end }}
-{{ if or (eq .Type "post") (.Params.meta)  }}
+{{ if .Params.subtitle }}<p class=subtitle>{{ .Params.subtitle  | markdownify }}</p>{{ end }}
+{{ if or (eq .Type "posts") (.Params.meta)  }}
   <span class="content-meta">
     {{ if .Params.author }}
        <i class="fa fa-user">&nbsp;</i><span class="author">
@@ -30,7 +30,7 @@
       <br>
       <i class="fa fa-tags"> </i>
       {{ range .Params.categories }}
-        <a  href="{{ "/categories/" }}{{ . | urlize }}">{{ . }}</a>
+        <a  href="{{ "/categories/" | absURL }}{{ . | urlize }}">{{ . }}</a>
       {{ end }}
     {{ end }}
   </span>
