--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -24,7 +24,7 @@
   {{ end }}
 {{ end }}
   {{ with .Get "title"}}<strong>{{ . }} </strong>{{ end}}
-  {{ with .Get "caption"}}{{ . }}{{ end }}
+  {{ with .Get "caption"}}{{ . | markdownify }}{{ end }}
   {{ with .Get "attrlink"}}<a href="{{ .}}">{{ end }}
   {{ with .Get "attr" }}{{ . }}{{ end }}
   {{ if .Get "attrlink" }}</a>{{ end }}
