--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,11 +4,13 @@
 <article class="pure-u-1">
 {{ partial "brand.html" . }}
 {{ range first 5 .Site.Pages }}
-  {{ partial "content.header.html" . }}
-  <p>{{ .Summary }}</p>
-  {{ if .Truncated }}
-  <p><a href="{{ .RelPermalink  }}">Read On &rarr;</a></p>
-  {{ end  }}
+  {{if eq .Type "posts"}}
+    {{ partial "content.header.html" . }}
+    <p>{{ .Summary }}</p>
+    {{ if .Truncated }}
+    <p><a href="{{ .RelPermalink  }}">Read On &rarr;</a></p>
+    {{ end  }}
+  {{ end }}
 {{ end  }}
 {{ partial "footer.html" . }}
 </article>
