--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,12 @@
 <div id="layout" class="pure-g">
 <article class="pure-u-1">
 {{ partial "brand.html" . }}
-{{ range first 5 .Site.Pages }}
+{{ $pages := .Pages }}
+{{ if .IsHome }}
+{{ $pages = .Site.RegularPages }}
+{{ end }}
+{{ $paginator := .Paginate $pages }}
+{{ range first 5 $pages }}
   {{if eq .Type "posts"}}
     {{ partial "content.header.html" . }}
     {{ if .Params.summary }}
